NBAnalytics: fix top of play by play getting cut off

--- a/projects/nbanalytics/css/gamePlayByPlay.css
+++ b/projects/nbanalytics/css/gamePlayByPlay.css
@@ -7,6 +7,8 @@
 
 	opacity: 0;
 	transition: opacity 300ms ease-in-out;
+
+	margin-top: 5px;
 }
 
 .game-play-by-play-view.active {
